Mon Jun  7 19:22:31 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* n-mod-group-by.rb: REQ#235対応

Mon Jun  7 17:50:52 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* bwc.rb: MershaledQueue対応

Mon Jun  7 12:43:32 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* port-marshaled-queue.rb: REQ#233対応
	* n-mod-group-by.rb: BUG#234対応

Wed Jun  2 16:27:19 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* port-marshaled-queue.rb, conf.rb: SizedMarshaledQueue作成

Tue Jun  1 17:22:15 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* port.rb, exception.rb, conf.rb: MershaledQueue対応(REQ#232)
	* port-marshaled-queue.rb: MershaledQueue対応での追加
	
	* b-mod-group-by.rb: オプションpostfilter_prequeuing_policyの設定
	  が出来てなかった

Wed May 26 17:48:06 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* port.rb: FileBufferdQueue#{store_2ndmemory,restore_2ndmemory}を最適化

Wed May 19 19:30:06 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* controller.rb, wc.rb, bwc.rb, nwc.rb: wc追加

Fri Apr 23 16:10:56 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* fairy_perf_graph.rb: 第4版

Fri Apr 23 16:08:22 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* fairy_perf_graph.rb: 第3版

Fri Apr 23 16:07:17 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* fairy_perf_graph.rb: 第2版

Fri Apr 23 16:02:58 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* fairy_perf_graph.rb: 第1版

Wed Apr 14 22:06:46 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* n-mod-group-by.rb, njob.rb, log-analysis.rb: REQ#227対応(その4)
	  PostFilterでのソート&セーブ時間の計測をできるようにした.

Wed Apr 14 16:01:35 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* fairy.conf, conf.rb: おすすめ値を標準値にした

Wed Apr 14 15:42:58 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* n-filter.rb, n-group-by.rb, port.rb: REQ#227対応(その3) njob実行
	  開始/終了, export開始/終了, import開始/終了

Thu Apr  8 20:15:39 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* b-merge-group_by.rb, n-direct-product.rb, n-group-by.rb,
  	  n-single-exportable.rb, port.rb: REQ#227対応(その2) Export対応
